0.08
 - Add test for Message.
 - Update copyright years.

0.07 2024-08-05T21:07:00+02:00
 - Fix UTF8 encoding of comments.

0.06 2024-08-05T10:51:47+02:00
 - Fix version of Plack::App::CPAN::Changes in code.

0.05 2024-08-05T10:46:44+02:00
 - Fix update of Plack::App::CPAN::Changes dependency.

0.04 2024-08-05T09:17:47+02:00
 - Fix update of Plack::App::CPAN::Changes dependency.

0.03 2024-08-05T09:11:19+02:00
 - Update footer to version with sans-serif font.
 - Update /changes page to version with sans-serif font.

0.02 2024-08-04T18:25:33+02:00
 - Add margin to #main CSS id in List.
 - Rewrite font in List to sans-serif.
 - Update to Tags helper with margin and sans-serif font.

0.01 2024-08-04T17:24:21+02:00
 - First version.