@@ -1,5 +1,6 @@
 0.08
  - Add test for Message.
+ - Fix copyright years in footer.
  - Update copyright years.
 
 0.07 2024-08-05T21:07:00+02:00
